Updated CSS to fix layout issues. (RM-2762)
git-svn-id: https://svn.re-motion.org/svn/Remotion/trunk@17295 cb0deee2-328e-b949-94ea-fb3139fab790

--- a/Remotion/ObjectBinding/Web/Res/Themes/ClassicBlue/HTML/BocTextValue.css
+++ b/Remotion/ObjectBinding/Web/Res/Themes/ClassicBlue/HTML/BocTextValue.css
@@ -17,6 +17,9 @@ span.bocTextValue .content
   left: 0;
   right: 0.5em;
   width: auto;
+  top: 0;
+  bottom: 0.5em;
+  height: auto;
 }
 
 .bocTextValue.readOnly .content
@@ -26,8 +29,15 @@ span.bocTextValue .content
 
 span.bocTextValue input
 {
-   width: 100%;
-   display: inline-block;
+  width: 100%;
+  display: inline-block;
+}
+
+span.bocTextValue textarea
+{
+  width: 100%;
+  height: 100%;
+  display: inline-block;
 }
 
 .bocTextValue.readOnly
