--- a/Remotion/ObjectBinding/Web/Res/Themes/NovaBlue/Html/BocMultilineTextValue.css
+++ b/Remotion/ObjectBinding/Web/Res/Themes/NovaBlue/Html/BocMultilineTextValue.css
@@ -3,6 +3,7 @@
 span.bocMultilineTextValue
 {
   width: 15em;
+  min-height: 4.5em;
   position: relative;
   display: inline-block;
   vertical-align: middle;
@@ -16,6 +17,9 @@ span.bocMultilineTextValue .content
   left: 0;
   right: 0.5em;
   width: auto;
+  top: 0;
+  bottom: 0.5em;
+  height: auto;
 }
 
 .bocMultilineTextValue.readOnly .content
@@ -26,6 +30,8 @@ span.bocMultilineTextValue .content
 span.bocMultilineTextValue textarea
 {
   width: 100%;
+  height: 100%;
+  display: inline-block;
 }
 
 .bocMultilineTextValue.readOnly
