--- a/Remotion/ObjectBinding/Web/Res/Themes/NovaBlue/Html/BocTextValue.css
+++ b/Remotion/ObjectBinding/Web/Res/Themes/NovaBlue/Html/BocTextValue.css
@@ -3,9 +3,11 @@
 span.bocTextValue
 {
   width: 15em;
+  min-height: 1.7em;
   position: relative;
   display: inline-block;
   vertical-align: middle;
+  overflow: hidden;
 }
 
 span.bocTextValue .content
@@ -15,6 +17,9 @@ span.bocTextValue .content
   left: 0;
   right: 0.5em;
   width: auto;
+  top: 0;
+  bottom: 0.5em;
+  height: auto;
 }
 
 .bocTextValue.readOnly .content
@@ -24,13 +29,15 @@ span.bocTextValue .content
 
 span.bocTextValue input
 {
-    width: 100%;
-    height: 1.2em;
+  width: 100%;
+  display: inline-block;
 }
 
-body.msie7 span.bocTextValue input
+span.bocTextValue textarea
 {
-    height: 1.25em;
+  width: 100%;
+  height: 100%;
+  display: inline-block;
 }
 
 .bocTextValue.readOnly
